--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 </head>
 <body>
 
+    <div class="container">
+        <header>
+            <h1>제목</h1>
+        </header>
+
+        <div class="container">
+            내용
+        </div>
+    </div>
+
 </body>
 </html>
