--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             margin: 0;
             padding: 0;
         }
+
+        .container {
+            display: flex;
+        }
     </style>
 </head>
 <body>
