--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         .container {
             display: flex;
         }
+
+        header h1{
+            font-size: 20px;
+            color: #000000;
+        }
     </style>
 </head>
 <body>
